modified:   assets/css/_extra.scss 	modified:   config.yaml 	new file:   content/amr_photo.jpeg 	deleted:    content/amr_photo.png 	modified:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1.md 	new file:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/.$Linux_Networking_Part_1_summary.drawio.bkp 	deleted:    content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/.$net_stack_simplified.drawio.dtmp 	modified:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/.$socket_buffer.drawio.bkp 	new file:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/Linux_Networking_Part_1_summary.drawio 	new file:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/Linux_Networking_Part_1_summary.jpg 	modified:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_1/socket_buffer.drawio 	modified:   content/blog/004_linux_0001_understanding_linux_networking/004_linux_0001_understanding_linux_networking_part_3.md 	modified:   content/blog/004_linux_0002_linux_command_cheat_sheet/004_linux_0002_linux_command_cheat_sheet.md 	modified:   docs/404.html 	modified:   docs/about/index.html 	new file:   docs/amr_photo.jpeg 	modified:   docs/blog/001_networks_0001_bgp_rpki/001_networks_0001_bgp_rpki/index.html 	modified:   docs/blog/001_networks_0003_extending_rfc_1918/001_networks_0003_extending_rfc_1918/index.html 	modified:   docs/blog/001_networks_0004_drawio_lib/001_networks_0004_drawio_lib/index.html 	modified:   docs/blog/001_networks_0005_understanding_networks_asics/001_networks_0005_understanding_networks_asics_part_1/index.html 	modified:   docs/blog/001_netw

--- a/assets/css/_extra.scss
+++ b/assets/css/_extra.scss
@@ -5,6 +5,11 @@
   border: 0rem solid $primary-color;
 }
 
+.app-header-avatar {
+  width: 5rem;
+  height: 5rem;
+}
+
 .app-header-title {
   font-size: 1em;
   font-weight: bold;
@@ -21,4 +26,8 @@ body {
   .app-header{
     display: none;
   }
+}
+
+a{
+  text-decoration: underline;
 }
